# telegram-social-graph

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: DASHBOARD_RUNTIME_NOTES.md  DOCUMENTATION_MAP.md  FAQ.md  HOW_TO_READ_REPORT.md  OPERATIONS.md  OUTPUT_FILES.md  SCORING_AND_INDICES.md  SOCIAL_GRAPH_REFERENCE.md
scripts/: analyze_export.sh  continue_weekly_llm_run.py  preview_report.sh  pull_models.sh  setup_local.sh  shell_sanity_check.sh  update_readme_screenshots.sh
src/social_graph_service/: __init__.py  _voice_asr_worker.py  analysis.py  api.py  chat_profiles.py  cli.py  exporters.py  insights.py  media_signals.py  models.py  ollama.py  pipeline.py  reporting.py  telegram_export.py  temporal_analysis.py  voice_asr.py
tests/: test_analysis.py  test_chat_profiles.py  test_insights.py  test_media_signals.py  test_ollama.py  test_pipeline.py  test_reporting.py  test_telegram_export.py  test_temporal_analysis.py  test_voice_asr.py
